メッセージを取得するAPIのpathを修正
