# backend/config/routes.rb
@@ -5,8 +5,9 @@ Rails.application.routes.draw do
   mount Rswag::Api::Engine => '/api-docs'
   resources :comments
   get 'stores', to: 'stores#index'
-  resources :rooms, only: %i[index create update show destroy]
+  resources :rooms, only: %i[index create update show destroy] do
+    resources :messages, only: %i[index]
+  end
   get 'error_test', to: 'stores#error_test'
-  get 'comparison_report', to: 'comparison_report#show'
   get 'up' => 'rails/health#show', :as => :rails_health_check
 end
